--- a/package.json
+++ b/package.json
@@ -175,7 +175,8 @@
       "express",
       "ip",
       "minimist",
-      "sanitize.css"
+      "sanitize.css",
+      "dotenv-webpack"
     ],
     "include": [
       "core-js",
@@ -216,6 +217,7 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
+    "dotenv-webpack": "^1.5.4",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
@@ -227,7 +229,9 @@
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
+    "ramda": "^0.25.0",
     "react": "15.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "15.6.1",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
